@@ -1,6 +1,6 @@
 Package: mboost
 Title: Model-Based Boosting
-Date: 2010-03-17
+Date: 2010-04-01
 Version: 2.0-4
 Author: Torsten Hothorn, Peter Buehlmann, Thomas Kneib, Matthias Schmid and
   Benjamin Hofner
