@@ -62,9 +62,12 @@ bl1 \%X\% bl2
                  re-parameterized such that the unpenalized part of the fit is subtracted and
                  only the deviation effect is fitted. The unpenalized, parametric part has then
 		 to be included in separate base-learners using \code{bols} (see the examples below).}
-  \item{contrasts.arg}{ a character suitable for input to the
+  \item{contrasts.arg}{ a named list of characters suitable for input to the
                         \code{\link{contrasts}} replacement function, see
-                        \code{\link{model.matrix}}.}
+                        \code{\link{model.matrix}}, or a single
+			character which is then used as contrasts for
+			all factors in this base-learner (with the
+			exception of factors in \code{by}). }
   \item{tree_controls}{ an object of class \code{"\linkS4class{TreeControl}"}, which can be
                   obtained using \code{\link[party]{ctree_control}}.
                   Defines hyper-parameters for the trees which are used as base-learners,
